tests/positive/pr115_multiline_return.safe
package PR115_Multiline_Return is

   type Counter is range 0 to 10;

   function Identity (Input : Counter) returns Counter is
   begin
      return
         Input;
   end Identity;

end PR115_Multiline_Return;
